--- a/photoblog/portfolio.html
+++ b/photoblog/portfolio.html
@@ -11,22 +11,24 @@
 </head>
 <body>
     <header class="container">
+        <div>
         <img class="logotype" src="/img/WebStudio2.png" alt="">
         <ul class="navigation-list">
             <li><a class="navigation" href="/Студія">Студія</a></li>
             <li><a class="navigation" href="/Портфоліо">Портфоліо</a></li>
             <li><a class="navigation" href="/Контакти">Контакти</a></li>
-            <address><a class="gmail" href="info@devstudio.com">info@devstudio.com</a></address>
+            <address><a class="gmail" id="gmail" href="info@devstudio.com">info@devstudio.com</a></address>
             <address><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></address>
         </ul>
+    </div>
     </header>
     <main class="container">
         <ul class="nav-buttons">
-            <li><img src="/img/all.png" alt=""></li>
+            <li class="nav"><img src="/img/all.png" alt=""></li>
             <li><img src="/img/cites.png" alt=""></li>
             <li><img src="/img/programes.png" alt=""></li>
             <li><img src="/img/sizanes.png" alt=""></li>
-            <li><img src="/img/marekt.png" alt=""></li>
+            <li class=""><img src="/img/marekt.png" alt=""></li>
         </ul>
         <ul>
             <li>
